{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 60,
  "lineage": "6b9ba320-4fd9-47fd-780a-f66e2b173e71",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_task-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:533076747374:instance/i-07d43ce835de20d73",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d43ce835de20d73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform_task",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03b9b376b296244e2",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_ip": "10.0.1.108",
            "public_ip": "52.90.8.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b24c7f0e404f2e4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b30d200e77296f7a",
            "tags": {
              "Name": "EC2 task5"
            },
            "tags_all": {
              "Name": "EC2 task5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b8a5c020446ab74f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_task-5",
            "aws_subnet.subnet_task-5",
            "aws_vpc.vpc_task-5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw_task-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533076747374:internet-gateway/igw-0434b2b2c5ada53d6",
            "id": "igw-0434b2b2c5ada53d6",
            "owner_id": "533076747374",
            "tags": {
              "Name": "myigw task-5"
            },
            "tags_all": {
              "Name": "myigw task-5"
            },
            "vpc_id": "vpc-0d6f704d2884634bb"
          },
          "dependencies": [
            "aws_vpc.vpc_task-5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533076747374:route-table/rtb-0806f1497d314c61f",
            "id": "rtb-0806f1497d314c61f",
            "owner_id": "533076747374",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0434b2b2c5ada53d6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routing_Table_task-5"
            },
            "tags_all": {
              "Name": "Routing_Table_task-5"
            },
            "vpc_id": "vpc-0d6f704d2884634bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw_task-5",
            "aws_vpc.vpc_task-5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038d73315d79b7b82",
            "route_table_id": "rtb-0806f1497d314c61f",
            "subnet_id": "subnet-0b30d200e77296f7a"
          },
          "dependencies": [
            "aws_internet_gateway.gw_task-5",
            "aws_route_table.myrt",
            "aws_subnet.subnet_task-5",
            "aws_vpc.vpc_task-5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_task-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533076747374:security-group/sg-0b8a5c020446ab74f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8a5c020446ab74f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210827180556693500000001",
            "name_prefix": "terraform-",
            "owner_id": "533076747374",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security group for task-5"
            },
            "tags_all": {
              "Name": "Security group for task-5"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6f704d2884634bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_task-5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_task-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533076747374:subnet/subnet-0b30d200e77296f7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b30d200e77296f7a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533076747374",
            "tags": {
              "Name": "mySubnet_task-5"
            },
            "tags_all": {
              "Name": "mySubnet_task-5"
            },
            "vpc_id": "vpc-0d6f704d2884634bb"
          },
          "dependencies": [
            "aws_vpc.vpc_task-5"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_task-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533076747374:vpc/vpc-0d6f704d2884634bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0876ce4c65633d699",
            "default_route_table_id": "rtb-06d539ac3457b3a32",
            "default_security_group_id": "sg-0662984a70e116357",
            "dhcp_options_id": "dopt-e5457f9f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d6f704d2884634bb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06d539ac3457b3a32",
            "owner_id": "533076747374",
            "tags": {
              "Name": "lwterra"
            },
            "tags_all": {
              "Name": "lwterra"
            }
          }
        }
      ]
    }
  ]
}